--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -47,6 +47,14 @@
               </div>
             </div>
 
+<input
+  type="text"
+  id="ticketSearch"
+  placeholder="Search tickets..."
+  class="w-full md:w-1/3 mb-6 px-4 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200"
+/>
+
+
             <div id="supportTickets" class="space-y-6">
               <p class="text-gray-600 text-center">Loading tickets...</p>
             </div>
@@ -77,6 +85,18 @@
     backdrop.classList.add('hidden');
   });
 </script>
+<!-- Reply Modal -->
+<div id="replyModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+  <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
+    <h3 class="text-lg font-semibold text-gray-800 mb-2">Reply to Ticket</h3>
+    <p id="replyModalSubject" class="text-sm text-gray-500 mb-4"></p>
+    <textarea id="replyMessage" rows="5" class="w-full border rounded-lg p-2 text-sm text-gray-700 mb-4" placeholder="Type your reply..."></textarea>
+    <div class="flex justify-end space-x-2">
+      <button onclick="closeReplyModal()" class="px-4 py-2 text-gray-600 hover:underline">Cancel</button>
+      <button onclick="submitReply()" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Send Reply</button>
+    </div>
+  </div>
+</div>
 
   </body>
 </html>
