--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -7,8 +7,16 @@
   <meta name="robots" content="noindex, nofollow" />
   <title>Forgot Password – Tidyzenic</title>
 
+  <!-- Tailwind CSS -->
   <link rel="stylesheet" href="/styles.css" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Optional fallback CSP (most policies should be injected server-side with nonce) -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.tidyzenic.com;">
 </head>
 <body class="bg-gray-100 font-sans text-gray-800">
 
@@ -17,107 +25,44 @@
       <h1 class="text-3xl font-bold text-center text-blue-700 mb-2">Forgot Password</h1>
       <p class="text-center text-gray-500 mb-6 text-sm">Enter your email and we’ll send you a link to reset your password.</p>
 
-<form id="forgotForm" class="space-y-6" novalidate>
-  <!-- Email Field -->
-  <div class="mb-4"> <!-- 🟢 Added margin-bottom -->
-    <label for="email" class="block text-sm font-medium mb-1">
-      Email <span class="text-red-600">*</span>
-    </label>
-    <input
-      type="email"
-      id="email"
-      name="email"
-      required
-      placeholder="you@example.com"
-      class="w-full rounded-lg border border-gray-300 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-500"
-    />
-  </div>
+      <form id="forgotForm" class="space-y-6" novalidate>
+        <div class="mb-4">
+          <label for="email" class="block text-sm font-medium mb-1">
+            Email <span class="text-red-600">*</span>
+          </label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            placeholder="you@example.com"
+            class="w-full rounded-lg border border-gray-300 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
 
-  <!-- Submit Button -->
-  <div>
-    <button
-      type="submit"
-      id="submitBtn"
-      class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 rounded-lg shadow-md transition duration-200"
-    >
-      Send Reset Link
-    </button>
-  </div>
+        <div>
+          <button
+            type="submit"
+            id="submitBtn"
+            class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 rounded-lg shadow-md transition duration-200"
+          >
+            Send Reset Link
+          </button>
+        </div>
 
-  <!-- Error Feedback -->
-  <div id="formError" class="text-sm text-red-600 mt-2 hidden" role="alert" aria-live="polite"></div>
+        <div id="formError" class="text-sm text-red-600 mt-2 hidden" role="alert" aria-live="polite"></div>
+        <div id="toast" class="text-sm text-green-600 mt-4 hidden" role="status" aria-live="polite">
+          ✅ Reset email sent! Please check your inbox.
+        </div>
 
-  <!-- Success Toast Message -->
-  <div id="toast" class="text-sm text-green-600 mt-4 hidden" role="status" aria-live="polite">
-    ✅ Reset email sent! Please check your inbox.
-  </div>
-
-  <!-- Back to Login -->
-  <p class="text-center text-sm text-gray-600 mt-4">
-    <a href="/login.html" class="text-blue-600 hover:underline">← Back to login</a>
-  </p>
-</form>
-
+        <p class="text-center text-sm text-gray-600 mt-4">
+          <a href="/login.html" class="text-blue-600 hover:underline">← Back to login</a>
+        </p>
+      </form>
     </div>
   </section>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const API_BASE = location.hostname.includes('localhost')
-        ? 'http://localhost:3000'
-        : 'https://tidyzenic-node.onrender.com';
-
-      const form = document.getElementById('forgotForm');
-      const emailInput = document.getElementById('email');
-      const errorBox = document.getElementById('formError');
-      const toast = document.getElementById('toast');
-      const submitBtn = document.getElementById('submitBtn');
-
-      const show = (el, msg) => {
-        el.textContent = msg;
-        el.classList.remove('hidden');
-      };
-
-      const hide = (...elements) => {
-        elements.forEach(el => el.classList.add('hidden'));
-      };
-
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        hide(errorBox, toast);
-        const email = emailInput.value.trim();
-
-        if (!email || !/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
-          show(errorBox, 'Please enter a valid email address.');
-          return;
-        }
-
-        submitBtn.disabled = true;
-        submitBtn.textContent = 'Sending...';
-
-        try {
-          const res = await fetch(`${API_BASE}/auth/forgot-password`, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ email }),
-          });
-
-          const data = await res.json();
-
-          if (res.ok) {
-            show(toast, '✅ Reset email sent! Please check your inbox.');
-            form.reset();
-          } else {
-            show(errorBox, data.error || 'Something went wrong. Please try again.');
-          }
-        } catch (err) {
-          show(errorBox, 'Network error. Please try again.');
-        } finally {
-          submitBtn.disabled = false;
-          submitBtn.textContent = 'Send Reset Link';
-        }
-      });
-    });
-  </script>
+  <!-- External JS (moved from inline for CSP compatibility) -->
+<script src="/js/forgot-password.js" defer></script>
 </body>
 </html>
