🚀 Minify forgot-password JS and update HTML reference

--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -63,6 +63,6 @@
   </section>
 
   <!-- External JS (moved from inline for CSP compatibility) -->
-<script src="/js/forgot-password.js" defer></script>
+<script src="/js/forgot-password.min.js" defer></script>
 </body>
 </html>
