--- a/public/register.html
+++ b/public/register.html
@@ -7,9 +7,19 @@
   <meta name="description" content="Register your business to manage your agency in the cloud with Tidyzenic." />
   <meta name="robots" content="noindex, nofollow" />
   <title>Register – Tidyzenic</title>
+
+  <!-- Tailwind CSS -->
   <link rel="stylesheet" href="/styles.css" />
+
+  <!-- Fonts (CSP-safe loading) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <!-- CSP fallback for environments without server-set headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.tidyzenic.com;">
 </head>
+
 <body class="bg-gray-100 text-gray-800">
 
   <section class="min-h-screen flex items-center justify-center px-4">
@@ -17,8 +27,9 @@
       <h1 class="text-4xl font-bold text-center text-blue-700 mb-2">Register Your Business</h1>
       <p class="text-center text-gray-500 mb-8">Start managing your agency in the cloud</p>
 
-      <form id="registerForm" class="grid grid-cols-1 md:grid-cols-2 gap-6" method="POST" action="/register">
-        <!-- Left column -->
+      <!-- Registration Form -->
+      <form id="registerForm" class="grid grid-cols-1 md:grid-cols-2 gap-6" novalidate>
+        <!-- LEFT COLUMN -->
         <div class="space-y-4">
           <div>
             <label class="block text-sm font-medium">Business Name <span class="text-red-600">*</span></label>
@@ -26,22 +37,12 @@
             <div id="business-name-feedback" class="text-sm text-red-600 mt-2"></div>
           </div>
 
-       <div class="space-y-1">
-  <label for="email" class="block text-sm font-medium text-gray-700">
-    Email <span class="text-red-600">*</span>
-  </label>
-  <input
-    type="email"
-    id="email"
-    name="email"
-    required
-    class="w-full rounded-lg border px-4 py-3 focus:ring-blue-500 focus:border-blue-500"
-    autocomplete="email"
-  />
-  <div id="email-feedback" class="text-sm text-red-600"></div>
-  <div id="email-login-hint" class="text-sm text-blue-600"></div>
-</div>
-
+          <div>
+            <label for="email" class="block text-sm font-medium">Email <span class="text-red-600">*</span></label>
+            <input type="email" id="email" name="email" required class="w-full rounded-lg border px-4 py-3" autocomplete="email" />
+            <div id="email-feedback" class="text-sm text-red-600"></div>
+            <div id="email-login-hint" class="text-sm text-blue-600"></div>
+          </div>
 
           <div>
             <label class="block text-sm font-medium">Phone <span class="text-red-600">*</span></label>
@@ -62,7 +63,7 @@
           </div>
         </div>
 
-        <!-- Right column -->
+        <!-- RIGHT COLUMN -->
         <div class="space-y-4">
           <div>
             <label class="block text-sm font-medium">Location <span class="text-red-600">*</span></label>
@@ -123,6 +124,7 @@
     </div>
   </section>
 
-  <script src="/js/register.js"></script>
+  <!-- JS (deferred for CSP compliance) -->
+<script src="/js/register.min.js" defer></script>
 </body>
 </html>
