--- a/public/register.html
+++ b/public/register.html
@@ -1,130 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Register your business to manage your agency in the cloud with Tidyzenic." />
-  <meta name="robots" content="noindex, nofollow" />
-  <title>Register – Tidyzenic</title>
+  <title>Support – Admin</title>
 
   <!-- Tailwind CSS -->
   <link rel="stylesheet" href="/styles.css" />
 
-  <!-- Fonts (CSP-safe loading) -->
+  <!-- Inter Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- CSP fallback for environments without server-set headers -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.tidyzenic.com;">
+  <!-- Basic CSP fallback (for dev); nonce-based CSP handled server-side -->
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.tidyzenic.com;">
 </head>
 
-<body class="bg-gray-100 text-gray-800">
+<body class="font-inter text-gray-900 bg-gray-100 min-h-screen">
 
-  <section class="min-h-screen flex items-center justify-center px-4">
-    <div class="w-full max-w-3xl bg-white shadow-xl rounded-2xl p-10">
-      <h1 class="text-4xl font-bold text-center text-blue-700 mb-2">Register Your Business</h1>
-      <p class="text-center text-gray-500 mb-8">Start managing your agency in the cloud</p>
-
-      <!-- Registration Form -->
-      <form id="registerForm" class="grid grid-cols-1 md:grid-cols-2 gap-6" novalidate>
-        <!-- LEFT COLUMN -->
-        <div class="space-y-4">
-          <div>
-            <label class="block text-sm font-medium">Business Name <span class="text-red-600">*</span></label>
-            <input type="text" id="business_name" name="business_name" required class="mt-1 w-full rounded-lg border px-4 py-3 focus:ring-blue-500 focus:border-blue-500" />
-            <div id="business-name-feedback" class="text-sm text-red-600 mt-2"></div>
-          </div>
-
-          <div>
-            <label for="email" class="block text-sm font-medium">Email <span class="text-red-600">*</span></label>
-            <input type="email" id="email" name="email" required class="w-full rounded-lg border px-4 py-3" autocomplete="email" />
-            <div id="email-feedback" class="text-sm text-red-600"></div>
-            <div id="email-login-hint" class="text-sm text-blue-600"></div>
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">Phone <span class="text-red-600">*</span></label>
-            <div class="flex space-x-2">
-              <select id="country_code" class="w-1/3 rounded-lg border px-4 py-3">
-                <option value="+1">+1</option>
-                <option value="+44">+44</option>
-              </select>
-              <input type="tel" id="phone" name="phone" required class="w-2/3 rounded-lg border px-4 py-3" />
-            </div>
-            <div id="phone-feedback" class="text-sm mt-2 text-red-600"></div>
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">Owner Name <span class="text-red-600">*</span></label>
-            <input type="text" id="owner_name" name="owner_name" required class="mt-1 w-full rounded-lg border px-4 py-3" />
-            <div id="owner-name-feedback" class="text-sm mt-2 text-red-600"></div>
-          </div>
-        </div>
-
-        <!-- RIGHT COLUMN -->
-        <div class="space-y-4">
-          <div>
-            <label class="block text-sm font-medium">Location <span class="text-red-600">*</span></label>
-            <select id="location" name="location" required class="mt-1 w-full rounded-lg border px-4 py-3">
-              <option value="USA">United States</option>
-              <option value="Canada">Canada</option>
-            </select>
-            <div id="location-feedback" class="text-sm mt-2 text-red-600"></div>
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">VAT Number (Optional)</label>
-            <input type="text" id="vat_number" name="vat_number" class="mt-1 w-full rounded-lg border px-4 py-3" />
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">Subdomain <span class="text-red-600">*</span></label>
-            <input type="text" id="subdomain" name="subdomain" readonly class="mt-1 w-full rounded-lg border px-4 py-3 bg-gray-100" />
-            <p class="text-xs mt-1 text-gray-500">Your URL: <span id="subPreview" class="text-blue-600 font-medium">__.tidyzenic.com</span></p>
-            <div id="subdomain-feedback" class="text-sm mt-2 text-red-600"></div>
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">Password <span class="text-red-600">*</span></label>
-            <input type="password" id="password" name="password" required minlength="8" class="mt-1 w-full rounded-lg border px-4 py-3" />
-            <div id="password-feedback" class="text-sm mt-2 text-red-600"></div>
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">Confirm Password <span class="text-red-600">*</span></label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required minlength="8" class="mt-1 w-full rounded-lg border px-4 py-3" />
-            <div id="confirm-password-feedback" class="text-sm mt-2 text-red-600"></div>
-          </div>
-
-          <div class="flex items-start space-x-2 mt-2">
-            <input type="checkbox" id="terms" name="terms" class="mt-1" required />
-            <label for="terms" class="text-sm leading-tight">
-              I agree to the <a href="/terms.html" class="text-blue-600 hover:underline">Terms and Conditions</a>
-            </label>
-          </div>
-          <div id="terms-feedback" class="text-sm text-red-600"></div>
-
-          <div class="pt-4">
-            <button type="submit" id="submitBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 rounded-lg transition">
-              Register Business
-            </button>
-          </div>
-        </div>
-      </form>
-
-      <div id="message" class="mt-6 text-center text-green-600 font-semibold hidden">
-        ✅ Verification email sent. Please confirm to continue.
-      </div>
-
-      <p class="text-center text-sm text-gray-600 mt-6">
-        Already registered? <a href="/login.html" class="text-blue-600 hover:underline">Login here</a>
-      </p>
+  <!-- Header (mobile) -->
+  <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
+    <div class="flex items-center space-x-2">
+      <button id="menuToggle" class="text-gray-700 focus:outline-none">
+        <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+      <span class="font-bold text-lg text-blue-600">Support</span>
     </div>
-  </section>
+  </header>
 
-  <!-- JS (deferred for CSP compliance) -->
-<script src="/js/register.min.js" defer></script>
+  <!-- Layout -->
+  <div class="flex min-h-screen relative">
+    <!-- Sidebar -->
+    <div id="sidebar-container" class="fixed md:relative z-40 inset-y-0 left-0 w-72 transform transition-transform duration-300 ease-in-out -translate-x-full md:translate-x-0"></div>
+    <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
+
+    <!-- Main Content -->
+    <main class="flex-1 p-4 md:p-8 overflow-y-auto relative z-10">
+      <div class="max-w-5xl mx-auto">
+        <div class="bg-white p-6 rounded-2xl shadow-xl mb-12">
+          <div class="flex items-center justify-between mb-6">
+            <div>
+              <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
+              <p class="text-sm text-gray-600 mt-1">All support requests from users</p>
+            </div>
+            <div class="text-sm bg-blue-100 text-blue-800 px-4 py-2 rounded-xl shadow">
+              <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
+            </div>
+          </div>
+
+          <!-- Search -->
+          <input id="ticketSearch" type="text" placeholder="Search tickets..." class="w-full md:w-1/3 mb-6 px-4 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200" />
+
+          <!-- Ticket List -->
+          <div id="supportTickets" class="space-y-6">
+            <p class="text-center text-gray-500">Loading tickets...</p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+
+  <!-- Reply Modal -->
+  <div id="replyModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
+      <h3 class="text-lg font-semibold text-gray-800 mb-2">Reply to Ticket</h3>
+      <p id="replyModalSubject" class="text-sm text-gray-500 mb-4"></p>
+      <textarea id="replyMessage" rows="5" class="w-full border rounded-lg p-2 text-sm text-gray-700 mb-4" placeholder="Type your reply..."></textarea>
+      <div class="flex justify-end space-x-2">
+        <button id="closeReplyBtn" class="px-4 py-2 text-gray-600 hover:underline">Cancel</button>
+        <button id="submitReplyBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Send Reply</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts (deferred for CSP compatibility) -->
+  <script src="/js/auth-check.js" defer></script>
+  <script src="/admin/js/load-sidebar.js" defer></script>
+  <script src="/admin/js/support-page.min.js" defer></script>
 </body>
 </html>
