--- a/public/support.html
+++ b/public/support.html
@@ -10,81 +10,37 @@
 <body class="bg-gray-100 text-gray-800">
 
   <section class="min-h-screen flex items-center justify-center px-4 py-10">
-    <div class="w-full max-w-4xl bg-white shadow-xl rounded-2xl p-10">
-      <h1 class="text-3xl font-bold text-center text-blue-700 mb-4">Need Help? We're Here</h1>
-      <p class="text-center text-gray-500 mb-8">Contact Tidyzenic support team and we’ll get back to you shortly.</p>
+    <div class="w-full max-w-3xl bg-white shadow-xl rounded-2xl p-8">
+      <h1 class="text-3xl font-bold text-center text-blue-700 mb-4">Submit a Support Ticket</h1>
+      <p class="text-center text-gray-500 mb-6">Need help with something? Let us know and we’ll respond shortly.</p>
 
-      <form id="supportForm" class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <div class="space-y-4">
-          <div>
-            <label class="block text-sm font-medium">Your Name <span class="text-red-600">*</span></label>
-            <input type="text" id="name" name="name" required class="w-full border rounded-lg px-4 py-3" />
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">Email <span class="text-red-600">*</span></label>
-            <input type="email" id="email" name="email" required class="w-full border rounded-lg px-4 py-3" />
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium">Subject <span class="text-red-600">*</span></label>
-            <input type="text" id="subject" name="subject" required class="w-full border rounded-lg px-4 py-3" />
-          </div>
+      <form id="supportForm" class="space-y-6">
+        <div>
+          <label for="subject" class="block text-sm font-medium">Subject <span class="text-red-600">*</span></label>
+          <input type="text" id="subject" name="subject" required class="w-full border rounded-lg px-4 py-3" />
         </div>
 
-        <div class="space-y-4">
-          <div>
-            <label class="block text-sm font-medium">Message <span class="text-red-600">*</span></label>
-            <textarea id="message" name="message" rows="7" required class="w-full border rounded-lg px-4 py-3"></textarea>
-          </div>
+        <div>
+          <label for="message" class="block text-sm font-medium">Message <span class="text-red-600">*</span></label>
+          <textarea id="message" name="message" rows="6" required class="w-full border rounded-lg px-4 py-3"></textarea>
         </div>
 
-        <div class="md:col-span-2 text-center pt-4">
+        <div class="text-center">
           <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg transition">
-            Send Message
+            Send Ticket
           </button>
           <p id="statusMsg" class="text-sm mt-4"></p>
         </div>
       </form>
 
       <div class="mt-10 border-t pt-6 text-sm text-center text-gray-500">
-        Or email us directly at <a href="mailto:support@tidyzenic.com" class="text-blue-600 hover:underline">support@tidyzenic.com</a>
+        View past messages below.
       </div>
+
+      <div id="supportTickets" class="mt-6 space-y-4"></div>
     </div>
   </section>
 
-  <script>
-    document.getElementById('supportForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const status = document.getElementById('statusMsg');
-      status.textContent = 'Sending...';
-
-      const payload = {
-        name: e.target.name.value,
-        email: e.target.email.value,
-        subject: e.target.subject.value,
-        message: e.target.message.value,
-      };
-
-      try {
-        const res = await fetch('/api/support', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(payload),
-        });
-
-        const data = await res.json();
-        if (res.ok) {
-          status.textContent = '✅ Message sent! We’ll get back to you soon.';
-          e.target.reset();
-        } else {
-          status.textContent = data.error || '❌ Something went wrong.';
-        }
-      } catch (err) {
-        console.error('Support form error:', err);
-        status.textContent = '❌ Server error. Please try again later.';
-      }
-    });
-  </script>
+  <script src="/admin/js/support-page.js"></script>
 </body>
 </html>
