--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -5,14 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Support – Admin View</title>
 
+  <!-- Styles -->
   <link rel="stylesheet" href="/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- Basic fallback CSP (server sets nonce-based CSP for actual protection) -->
+  <!-- Updated CSP allowing Google Fonts -->
   <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://*.tidyzenic.com;">
+        content="
+          default-src 'self';
+          script-src 'self';
+          style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+          font-src 'self' https://fonts.gstatic.com;
+          img-src 'self' data:;
+          connect-src 'self' https://*.tidyzenic.com;
+        ">
 </head>
+
 
 <body class="min-h-screen font-inter bg-gray-100 text-gray-900">
   <!-- Mobile Header -->
