--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -11,18 +11,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- Updated CSP allowing Google Fonts -->
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self';
-          style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-          font-src 'self' https://fonts.gstatic.com;
-          img-src 'self' data:;
-          connect-src 'self' https://*.tidyzenic.com;
-        ">
+  <!-- CSP -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self';
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    font-src 'self' https://fonts.gstatic.com;
+    img-src 'self' data:;
+    connect-src 'self' https://*.tidyzenic.com;
+  ">
 </head>
-
 
 <body class="min-h-screen font-inter bg-gray-100 text-gray-900">
   <!-- Mobile Header -->
@@ -39,9 +37,13 @@
 
   <!-- Layout -->
   <div class="flex min-h-screen relative">
-    <div id="sidebar-container" class="z-40 fixed md:relative inset-y-0 left-0 w-72 transform transition-transform duration-300 ease-in-out -translate-x-full md:translate-x-0"></div>
+    <!-- Sidebar -->
+    <div id="sidebar-container"></div>
+
+    <!-- Mobile Backdrop -->
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
+    <!-- Main -->
     <main class="flex-1 overflow-y-auto p-4 md:p-8 relative z-10">
       <div class="max-w-5xl mx-auto">
         <div class="bg-white p-6 rounded-2xl shadow-xl mb-12">
@@ -78,7 +80,7 @@
     </div>
   </div>
 
-  <!-- ✅ External Scripts (minified) -->
+  <!-- Scripts -->
   <script src="/js/auth-check.js" defer></script>
   <script src="/admin/js/load-sidebar.js" defer></script>
   <script src="/admin/js/support-page.min.js" defer></script>
