--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Support – Admin View</title>
 
-  <!-- Fonts and Styles -->
+  <!-- Styles -->
   <link rel="stylesheet" href="/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,23 +20,9 @@
     img-src 'self' data:;
     connect-src 'self' https://*.tidyzenic.com;
   ">
-
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-    }
-    @keyframes fade-in {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-    .animate-fade-in {
-      animation: fade-in 0.2s ease-out;
-    }
-  </style>
 </head>
 
-<body class="min-h-screen bg-gray-100 text-gray-900 font-inter">
-
+<body class="min-h-screen font-inter bg-gray-100 text-gray-900">
   <!-- Mobile Header -->
   <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
     <div class="flex items-center space-x-2">
@@ -49,18 +35,18 @@
     </div>
   </header>
 
-  <!-- Page Layout -->
+  <!-- Layout -->
   <div class="flex min-h-screen relative">
-    <!-- Sidebar container -->
+    <!-- Sidebar -->
     <div id="sidebar-container"></div>
 
-    <!-- Mobile overlay -->
+    <!-- Mobile Backdrop -->
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-    <!-- Main Content -->
-    <main class="flex-1 overflow-y-auto p-4 md:p-8 z-10 relative">
+    <!-- Main -->
+    <main class="flex-1 overflow-y-auto p-4 md:p-8 relative z-10">
       <div class="max-w-5xl mx-auto">
-        <section class="bg-white p-6 rounded-2xl shadow-xl mb-12">
+        <div class="bg-white p-6 rounded-2xl shadow-xl mb-12">
           <div class="flex items-center justify-between mb-6">
             <div>
               <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
@@ -71,52 +57,27 @@
             </div>
           </div>
 
-          <input id="ticketSearch" type="text" placeholder="Search tickets..."
-            class="w-full md:w-1/3 mb-6 px-4 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200" />
+          <input id="ticketSearch" type="text" placeholder="Search tickets..." class="w-full md:w-1/3 mb-6 px-4 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200" />
 
           <div id="supportTickets" class="space-y-6">
             <p class="text-gray-600 text-center">Loading tickets...</p>
           </div>
-        </section>
+        </div>
       </div>
     </main>
   </div>
 
-  <!-- Modal: Reply to Ticket -->
-  <div id="replyModal" class="fixed inset-0 bg-black bg-opacity-40 backdrop-blur-sm flex items-center justify-center z-50 hidden">
-    <div class="bg-white rounded-2xl shadow-xl w-full max-w-lg p-6 relative animate-fade-in">
-      <!-- Close -->
-      <button id="closeReplyBtn" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 text-lg">
-        &times;
-      </button>
-
-      <!-- Title -->
-      <h2 class="text-lg font-semibold text-blue-800 mb-2 flex items-center gap-2">
-        ✉️ <span id="replyModalSubject">Reply to:</span>
-      </h2>
-
-      <!-- Textarea -->
-      <textarea id="replyMessage"
-        class="w-full p-3 border border-gray-200 rounded-lg text-sm focus:ring-2 focus:ring-blue-300 focus:outline-none"
-        rows="5" placeholder="Type your response..."></textarea>
-
-      <!-- Inline error -->
-      <p id="replyError" class="text-red-500 text-sm mt-2 hidden"></p>
-
-      <!-- Buttons -->
-      <div class="mt-4 flex justify-end gap-2">
-        <button id="submitReplyBtn"
-          class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-700 transition">
-          Send Reply
-        </button>
+  <!-- Reply Modal -->
+  <div id="replyModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
+      <h3 class="text-lg font-semibold text-gray-800 mb-2">Reply to Ticket</h3>
+      <p id="replyModalSubject" class="text-sm text-gray-500 mb-4"></p>
+      <textarea id="replyMessage" rows="5" class="w-full border rounded-lg p-2 text-sm text-gray-700 mb-4" placeholder="Type your reply..."></textarea>
+      <div class="flex justify-end space-x-2">
+        <button id="closeReplyBtn" class="px-4 py-2 text-gray-600 hover:underline">Cancel</button>
+        <button id="submitReplyBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Send Reply</button>
       </div>
     </div>
-  </div>
-
-  <!-- Toast Notification -->
-  <div id="toast"
-    class="fixed bottom-6 right-6 bg-green-600 text-white text-sm px-4 py-2 rounded-lg shadow-lg opacity-0 pointer-events-none transition-opacity duration-300 z-50">
-    Toast placeholder
   </div>
 
   <!-- Scripts -->
