Update admin sidebar layout and links

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -30,7 +30,7 @@
     <a href="/admin/settings.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚙️ Settings</a>
     <a href="/admin/billing.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧾 Billing</a>
     <a href="/admin/reports.html" class="block px-4 py-2 rounded hover:bg-blue-50" data-role="admin">📊 Reports</a>
-    <a href="/admin/support.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
+    <a href="/admin/support_ticket.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
     <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
     <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
   </div>
